--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,10 @@
 <div class="flex column">
   <div class="flex">
-    <app-properties-card [properties]="leftCard"></app-properties-card>
-    <app-properties-card [properties]="rightCard"></app-properties-card>  
+    <app-properties-card data-cy="left-card" [properties]="leftCard"></app-properties-card>
+    <app-properties-card data-cy="right-card" [properties]="rightCard"></app-properties-card>  
   </div>
   
-  <div class="center">{{winner}}</div>
+  <div data-cy="winner" class="center">{{winner}}</div>
   
-  <button mat-button class="button" (click)="playAgain()">Play again</button>
+  <button mat-button class="button" (click)="playAgain()" data-cy="play-again">Play again</button>
 </div>
