--- a/src/app/game/person-properties-card/person-properties-card.component.html
+++ b/src/app/game/person-properties-card/person-properties-card.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <mat-card-content>
         <p>{{properties.homeworld}}</p>
-        <p>Mass is {{properties.mass}}</p>
+        <div>Mass is <p class="mass">{{properties.mass}}</p></div>
         <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-footer>
