--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,12 @@
 <div class="flex column">
+  <button mat-button class="button" (click)="playAgain()" data-cy="play-again">Play again</button>
+
   <div class="flex">
     <app-properties-card data-cy="left-card" [properties]="leftCard" [isLoading$]="isLoading$"></app-properties-card>
-    <app-properties-card data-cy="right-card" [properties]="rightCard" [isLoading$]="isLoading$"></app-properties-card>  
+    <app-properties-card data-cy="right-card" [properties]="rightCard" [isLoading$]="isLoading$"></app-properties-card>
   </div>
-  
-  <div data-cy="winner" class="center" *ngIf="winner">{{winner}} wins !</div>
-  
-  <button mat-button class="button" (click)="playAgain()" data-cy="play-again">Play again</button>
+
+  <div class="center">
+    <span data-cy="winner">{{winner}}</span> <span *ngIf="winner"> wins !</span>
+  </div>
 </div>
