--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,15 @@
 <div class="flex column">
-  <button mat-button class="button" (click)="playAgain()" data-cy="play-again">Play again</button>
+  <button mat-button class="button" data-cy="play-again" (click)="playAgain()" [disabled]="isLoading$ | async">Play again</button>
 
-  <div class="flex">
-    <app-properties-card data-cy="left-card" [properties]="leftCard" [isLoading$]="isLoading$"></app-properties-card>
-    <app-properties-card data-cy="right-card" [properties]="rightCard" [isLoading$]="isLoading$"></app-properties-card>
+  <div class="flex mobile-column">
+    <div class="flex column player">
+      <h2 class="center">Player 1</h2>
+      <app-properties-card data-cy="left-card" [properties]="leftCard" [isLoading$]="isLoading$"></app-properties-card>
+    </div>
+    <div class="flex column player">
+      <h2 class="center">Player 2</h2>
+      <app-properties-card data-cy="right-card" [properties]="rightCard" [isLoading$]="isLoading$"></app-properties-card>
+    </div>
   </div>
 
   <div class="center">
