--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,11 +3,22 @@
     width: 100%;
     justify-content: center;
     margin: 15px 0;
-    flex-wrap: wrap;
 }
 
 .column {
     flex-direction: column;
+}
+
+.player {
+    margin: 15px;
+}
+
+.mobile-column {
+    @media (max-width: 780px) {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .center {
