--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -3,12 +3,13 @@
 
   <div class="flex mobile-column">
     <div class="flex column player">
-      <h2 class="center">Player 1</h2>
+      <app-player-header [player]="'Player 1'" [winCount$]="leftCardPlayersWinCount$" [cypressSelector]="'left-card-win-count'"></app-player-header>
       <app-properties-card data-cy="left-card" [properties]="leftCard" [isLoading$]="isLoading$"></app-properties-card>
     </div>
     <div class="flex column player">
-      <h2 class="center">Player 2</h2>
-      <app-properties-card data-cy="right-card" [properties]="rightCard" [isLoading$]="isLoading$"></app-properties-card>
+      <app-player-header [player]="'Player 2'" [winCount$]="rightCardPlayersWinCount$" [cypressSelector]="'right-card-win-count'"></app-player-header>
+      <app-properties-card data-cy="right-card" [properties]="rightCard"
+        [isLoading$]="isLoading$"></app-properties-card>
     </div>
   </div>
 
