--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -7,6 +7,7 @@
 
 .column {
     flex-direction: column;
+    justify-content: flex-start;
 }
 
 .player {
@@ -17,7 +18,6 @@
     @media (max-width: 780px) {
         flex-direction: column;
         align-items: center;
-        justify-content: center;
     }
 }
 
