--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
-        <mat-toolbar color="primary">
-            <div>
+        <mat-toolbar color="primary" class="flex">
                 <a mat-button routerLink="/">
                     I am a Star Wars Game App :3
                 </a>
-            </div>
+                <img alt="Picture of Darth Vader showing off his red lightsaber" src="../assets/vader.gif" />
         </mat-toolbar>
         <main>
             <app-game />
