--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,10 +1,3 @@
-.flex {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin: 15px 0;
-}
-
 .column {
     flex-direction: column;
     justify-content: flex-start;
@@ -15,6 +8,7 @@
 }
 
 .mobile-column {
+    padding: 0 15px;
     @media (max-width: 780px) {
         flex-direction: column;
         align-items: center;
@@ -26,6 +20,5 @@
 }
 
 .button {
-    max-width: 20%;
     margin: 15px auto;
 }
