--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+* {
+    box-sizing: border-box;
+}
+
+.flex {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin: 15px 0;
+}
