--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,15 +1,19 @@
 <div class="flex column">
+  <button mat-button class="button" data-cy="change-mode" (click)="changeMode()" [disabled]="isLoading$ | async">Change Mode</button>
   <button mat-button class="button" data-cy="play-again" (click)="playAgain()" [disabled]="isLoading$ | async">Play again</button>
 
   <div class="flex mobile-column">
     <div class="flex column player">
       <app-player-header [player]="'Player 1'" [winCount$]="leftCardPlayersWinCount$" [cypressSelector]="'left-card-win-count'"></app-player-header>
-      <app-properties-card data-cy="left-card" [properties]="leftCard" [isLoading$]="isLoading$"></app-properties-card>
+      <app-properties-card data-cy="left-card" [mode]="mode" [properties]="leftCard" [isLoading$]="isLoading$">
+        <div class="property-wrapper">{{propertyName}} <span class="property">{{leftCardPropertyValueToDisplay}}</span></div>
+      </app-properties-card>
     </div>
     <div class="flex column player">
       <app-player-header [player]="'Player 2'" [winCount$]="rightCardPlayersWinCount$" [cypressSelector]="'right-card-win-count'"></app-player-header>
-      <app-properties-card data-cy="right-card" [properties]="rightCard"
-        [isLoading$]="isLoading$"></app-properties-card>
+      <app-properties-card data-cy="right-card" [mode]="mode" [properties]="rightCard" [isLoading$]="isLoading$">
+        <div class="property-wrapper">{{propertyName}} <span class="property">{{rightCardPropertyValueToDisplay}}</span></div>
+      </app-properties-card>
     </div>
   </div>
 
