--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -7,6 +7,10 @@
     margin: 15px;
 }
 
+.property-wrapper {
+    padding: 15px 0;
+}
+
 .mobile-column {
     padding: 0 15px;
     @media (max-width: 780px) {
