--- a/src/app/game/properties-card/properties-card.component.html
+++ b/src/app/game/properties-card/properties-card.component.html
@@ -1,10 +1,10 @@
 <mat-card class="properties-card">
     <mat-card-header>
-        <mat-card-subtitle>Character</mat-card-subtitle>
+        <mat-card-subtitle>{{mode}}</mat-card-subtitle>
         <mat-card-title>{{properties.name}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <div>Mass is <span class="mass">{{properties.mass}}</span></div>
+        <ng-content></ng-content>
     </mat-card-content>
     <mat-card-footer>
         <mat-progress-bar *ngIf="(isLoading$ | async)" mode="indeterminate"></mat-progress-bar>
