--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
                 <a mat-button routerLink="/">
                     I am a Star Wars Game App :3
                 </a>
-                <img alt="Picture of Darth Vader showing off his red lightsaber" src="../assets/vader.gif" />
+                <img alt="Picture of Darth Vader showing off his red lightsaber" src="assets/vader.gif" />
         </mat-toolbar>
         <main>
             <app-game />
